[package]
name = "graphs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.9"

[profile.dev]
codegen-units = 1024
opt-level = "z"

[profile.release]
codegen-units = 1
opt-level = "z"
strip = true
lto = true
